--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-handlebars-paginate": "^1.0.3",
+    "nodemon": "^2.0.2",
     "pg": "^7.14.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^5.21.3"
