--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,7 @@
 {
     "development": {
         "username": "postgres",
-<<<<<<< Updated upstream
-        "password": "postgres",
-=======
-        "password": "0810Quynh",
->>>>>>> Stashed changes
+        "password": "duythongminh229",
         "database": "SneakerSales",
         "host": "127.0.0.1",
         "dialect": "postgres"
